# Panoptic

./: PANOPTIC_CONCEPT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/ui/: card.tsx
src/hooks/: index.ts  useAuditLog.ts  useOpenAI.ts  useSecrets.ts  useSettings.ts
src/lib/: anthropic.ts  audit.ts  database.ts  gemini.ts  openai.ts  secrets.ts  settings.ts  utils.ts
src/pages/: AuditLog.tsx  Costs.tsx  Dashboard.tsx  LockScreen.tsx  Placeholder.tsx  Secrets.tsx  Settings.tsx
